discussion/kv_engine/177006/177006_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

[serverless] Add Dcp throttling and metering test

Add unit tests to verify that Throttling and Metering works
over DCP

Change-Id: Iab9d25c980d7d115d2783ba485177cafda652381

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 08:00:18.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 09:25:43.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18538/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9: error: use of undeclared identifier "EXPECT_TRUE" [clang-diagnostic-error]
        EXPECT_TRUE(rsp.isSuccess()) << rsp.getStatus();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18538/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18538/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20423/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20423/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8209/ : FAILURE

Compile error at [2022-07-03T08:51:53.944Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8209/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17689/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47300/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39750/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28803/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8308/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20771/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21410/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19644/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
